added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -186,7 +186,9 @@
     "\n",
     "### The option that says: Naive Bayesian model is incorrect. The performance of a Naive Bayesian model heavily relies on how strongly independent the predictors are. Since there are some highly correlated predictors in the dataset, a Full Bayesian network is more suitable.\n",
     "\n",
-    "### A Bayesian network is a representation of a joint probability distribution of a set of random variables with a possible mutual causal relationship. The network consists of nodes representing the random variables, edges between pairs of nodes representing the causal relationship of these nodes, and a conditional probability distribution in each of the nodes."
+    "### A Bayesian network is a representation of a joint probability distribution of a set of random variables with a possible mutual causal relationship. The network consists of nodes representing the random variables, edges between pairs of nodes representing the causal relationship of these nodes, and a conditional probability distribution in each of the nodes.\n",
+    "\n",
+    "###  Conditional independence refers to two random events being independent given that a third event occurs. For example, a person’s height and his language proficiency are conditionally independent when we consider his/her age. We are basing the decision on the correlation scores given in the question. The Pearson’s correlation coefficient is an absolute value and it only takes two variables into account. You can’t tell that some features are conditionally independent based on this data."
    ]
   },
   {
