added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -194,6 +194,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Cloud Watch VS Cloud Trail\n",
+    "\n",
+    "- Amazon CloudWatch monitors your AWS resources and the applications that you run on AWS in real-time. You can collect and track metrics, create customized dashboards, and set alarms that notify you or take actions when a specified metric reaches a threshold that you specify. For example, you can have CloudWatch track CPU usage or other metrics of your Amazon EC2 instances and automatically launch new instances when needed.\n",
+    "- Amazon SageMaker is integrated with AWS CloudTrail, a service that provides a record of actions taken by a user, role, or an AWS service in SageMaker. CloudTrail captures all API calls for SageMaker, with the exception of InvokeEndpoint, as events. The calls captured include calls from the SageMaker console and code calls to the SageMaker API operations. If you create a trail, you can enable continuous delivery of CloudTrail events to an Amazon S3 bucket, including events for SageMaker.\n",
+    "\n",
+    "- Amazon Inspector is incorrect because this is just an automated security assessment service. It won’t help you track the information required in the scenario.\n",
+    "\n",
+    "- AWS Config is incorrect. AWS Config is mainly used for assessing and evaluating the configuration settings of your resources. It won’t provide information about CPU utilization nor will it track user activities such as deployment operations in Amazon SageMaker.\n",
+    "\n",
+    "- AWS X-Ray is incorrect as this service is simply used for debugging applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
