added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -158,24 +158,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate Shards"
+    "## Calculate Shards\n",
+    "- Shard is the base throughput unit of an Amazon Kinesis data stream. One shard provides a capacity of 1 MB/sec data input and 2 MB/sec data output. One shard can support up to 1000 PUT records per second. You will specify the number of shards needed when you create a data stream."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of Shards based on Data Throughput=⌈ \n",
-    "#### Shard Limit (MB/s)\n",
-    "/ \n",
-    "#### Data Rate (MB/s)⌉\n",
+    "## Task Vs Master Nodes\n",
     "\n",
-    "### Number of Shards based on Transaction Rate=⌈ \n",
-    "#### Shard Limit (records/s)\n",
-    "/\n",
-    "#### Transaction Rate (records/s)\n",
-    "​\n",
-    " ⌉"
+    "- The task nodes process data but do not hold persistent data in HDFS. If they terminate because the Spot price has risen above your maximum Spot price, no data is lost and the effect on your cluster is minimal.\n",
+    "- When you launch one or more task instance groups as Spot Instances, Amazon EMR provisions as many task nodes as it can, using your maximum Spot price. This means that if you request a task instance group with six nodes, and only five Spot Instances are available at or below your maximum Spot price, Amazon EMR launches the instance group with five nodes, adding the sixth later if possible.\n",
+    "- Although the usage of the task node for running the Spot instance is correct, you should only consider running Core nodes in Spot instances when data loss is tolerable. Data loss in a long-running task is not preferable because it might incur additional costs due to re-running the task."
    ]
   },
   {
