added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -216,6 +216,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Built in Models\n",
+    "\n",
+    "### Amazon Forecast CNN-QR, Convolutional Neural Network – Quantile Regression, is a proprietary machine learning algorithm for forecasting time series using causal convolutional neural networks (CNNs). CNN-QR works best with large datasets containing hundreds of time series. It accepts item metadata and is the only Forecast algorithm that accepts related time series data without future values.\n",
+    "\n",
+    "- In scenarios where there are complex and potentially nonlinear relationships between different factors, such as weather patterns, population density, and ridership numbers, CNN-QR can prove to be highly effective. CNN-QR can learn from a large volume of historical data and use this to generate accurate forecasts that take into account the relationships between different variables.\n",
+    "\n",
+    "- Non-parametric Time Series (NPTS) is incorrect. This algorithm does not make any assumptions about the underlying distribution of the data. NPTS is often used when there’s a lack of historical data or when the statistical properties of the data change over time. However, in this case, the city transportation department has 15 years’ worth of data, which may not fully leverage the strengths of the NPTS method.\n",
+    "\n",
+    "- Autoregressive Integrated Moving Average (ARIMA) is incorrect because this is best suited for data with clear trends and assumes linear relationships between variables. Given the potential complexity and nonlinear relationships in the gathered data (weather patterns, population density), ARIMA is not the best fit.\n",
+    "\n",
+    "- Exponential Smoothing (ETS) is incorrect. This is useful for simple datasets and datasets with seasonality patterns. Similar to ARIMA, it may not capture the complex interrelationships between weather patterns, population density, and ridership numbers as effectively as CNN-QR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
