added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AWS Built in Models\n",
+    "## AWS Time Series Built in Models\n",
     "\n",
     "### Amazon Forecast CNN-QR, Convolutional Neural Network – Quantile Regression, is a proprietary machine learning algorithm for forecasting time series using causal convolutional neural networks (CNNs). CNN-QR works best with large datasets containing hundreds of time series. It accepts item metadata and is the only Forecast algorithm that accepts related time series data without future values.\n",
     "\n",
