added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -244,6 +244,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## SageMaker Instance Metrics\n",
+    "\n",
+    "- In the scenario, you can create a target-tracking policy based on the InvocationsPerInstance metric. This metric represents the number of times the model is invoked per instance and helps determine if the current number of instances is enough to handle the incoming requests.\n",
+    "\n",
+    "- GPUUtilization is incorrect. While this metric can provide insights into the model performance, it doesn’t directly relate to the request load on the endpoint. For example, a high GPU utilization could be due to computationally intensive tasks within the model rather than a high volume of incoming requests. Scaling up, in this case, might not address the issue of serving the varying traffic demand efficiently.\n",
+    "\n",
+    "- OverheadLatency is incorrect because this simply represents the interval of time added to the time taken to respond to a client request by SageMaker overheads. Using this metric for auto-scaling wouldn’t necessarily guarantee that the endpoint scales up or down based on the demand.\n",
+    "\n",
+    "- ModelLatency is incorrect. This metric represents the interval of time taken by a model to respond as viewed from SageMaker. Like OverheadLatency, this metric is not a clear indication of the overall request load received by the SageMaker endpoint."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
