added new exponential notes

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -259,6 +259,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Logarithmic Transformation\n",
+    "\n",
+    "- The Logarithmic transformation helps positively skewed data conform to normally distributed data. You can easily spot the skewness of a distribution visually. A positively skewed distribution contains values that mostly cluster to the left and has a longer right tail. Its negative counterpart is simply the opposite. A normal distribution is a type of distribution that is symmetrical about the mean. The left side of the center is a mirror of the right side of the center.\n",
+    "\n",
+    "- The option that says: Laplace transform is incorrect. This is a transformation method that aims to simplify complex differential equations by converting them into algebraic equations and is mainly used for digital signal processing.\n",
+    "\n",
+    "- The option that says: Exponential transformation is incorrect because this will just drastically increase the values within the column and won’t normalize the data distribution.\n",
+    "\n",
+    "- The option that says: Third-order polynomial transformation is incorrect because this is more preferable in fixing negatively skewed data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
