added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logarithmic Transformation\n",
+    "## Scaling Transformations\n",
     "\n",
     "- The Logarithmic transformation helps positively skewed data conform to normally distributed data. You can easily spot the skewness of a distribution visually. A positively skewed distribution contains values that mostly cluster to the left and has a longer right tail. Its negative counterpart is simply the opposite. A normal distribution is a type of distribution that is symmetrical about the mean. The left side of the center is a mirror of the right side of the center.\n",
     "\n",
