added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -229,7 +229,9 @@
     "\n",
     "- Autoregressive Integrated Moving Average (ARIMA) is incorrect because this is best suited for data with clear trends and assumes linear relationships between variables. Given the potential complexity and nonlinear relationships in the gathered data (weather patterns, population density), ARIMA is not the best fit.\n",
     "\n",
-    "- Exponential Smoothing (ETS) is incorrect. This is useful for simple datasets and datasets with seasonality patterns. Similar to ARIMA, it may not capture the complex interrelationships between weather patterns, population density, and ridership numbers as effectively as CNN-QR."
+    "- Exponential Smoothing (ETS) is incorrect. This is useful for simple datasets and datasets with seasonality patterns. Similar to ARIMA, it may not capture the complex interrelationships between weather patterns, population density, and ridership numbers as effectively as CNN-QR.\n",
+    "\n",
+    "### The Amazon SageMaker DeepAR forecasting algorithm is a supervised learning algorithm for forecasting scalar (one-dimensional) time series using recurrent neural networks (RNN). It can provide better forecast accuracies compared to classical forecasting techniques such as Autoregressive Integrated Moving Average (ARIMA) or Exponential Smoothing (ES), both of which are implemented in many open-source and commercial software packages for forecasting."
    ]
   },
   {
