--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -291,6 +291,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## AWS Data Pipeline\n",
+    "\n",
+    "- AWS Data Pipeline is a web service that helps you reliably process and move data between different AWS compute and storage services, as well as on-premises data sources, at specified intervals. With AWS Data Pipeline, you can regularly access your data where it’s stored, transform and process it at scale, and efficiently transfer the results to AWS services such as Amazon S3, Amazon RDS, Amazon DynamoDB, and Amazon EMR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
