added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -300,7 +300,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## AWS NLP Models\n",
+    "\n",
+    "- The Amazon SageMaker Object2Vec algorithm is a general-purpose neural embedding algorithm that is highly customizable. It can learn low-dimensional dense embeddings of high-dimensional objects. The embeddings are learned in a way that preserves the semantics of the relationship between pairs of objects in the original space in the embedding space.\n",
+    "\n",
+    "- You can use the learned embeddings to efficiently compute nearest neighbors of objects and to visualize natural clusters of related objects in low-dimensional space, for example. You can also use the embeddings as features of the corresponding objects in downstream supervised tasks, such as classification or regression.\n",
+    "\n",
+    "- Use the Amazon SageMaker BlazingText algorithm in Text Classification mode to extract embeddings that represent whether a claim is compliant or not is incorrect because this does not satisfy the requirement. The Text Classification mode in the Amazon SageMaker BlazingText algorithm is only designed to classify text into defined categories. It won’t allow you to create sentence embeddings that can be provided as inputs for the downstream task.\n",
+    "\n",
+    "- Use the Amazon SageMaker BlazingText algorithm in Word2Vec mode to train a model based on the claims data for extracting embeddings. Apply the learned embeddings as inputs for the downstream task is incorrect. Although Word2vec is a valid embedding method, it is not enough to accomplish complex tasks such as creating embeddings for sentences that have labels. This is because Word2vec just operates on individual words.\n"
+   ]
   }
  ],
  "metadata": {
