added new models

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -231,7 +231,11 @@
     "\n",
     "- Exponential Smoothing (ETS) is incorrect. This is useful for simple datasets and datasets with seasonality patterns. Similar to ARIMA, it may not capture the complex interrelationships between weather patterns, population density, and ridership numbers as effectively as CNN-QR.\n",
     "\n",
-    "### The Amazon SageMaker DeepAR forecasting algorithm is a supervised learning algorithm for forecasting scalar (one-dimensional) time series using recurrent neural networks (RNN). It can provide better forecast accuracies compared to classical forecasting techniques such as Autoregressive Integrated Moving Average (ARIMA) or Exponential Smoothing (ES), both of which are implemented in many open-source and commercial software packages for forecasting."
+    "- The Amazon SageMaker DeepAR forecasting algorithm is a supervised learning algorithm for forecasting scalar (one-dimensional) time series using recurrent neural networks (RNN). It can provide better forecast accuracies compared to classical forecasting techniques such as Autoregressive Integrated Moving Average (ARIMA) or Exponential Smoothing (ES), both of which are implemented in many open-source and commercial software packages for forecasting.\n",
+    "\n",
+    "- Amazon Forecasts DeepAR+ is a supervised learning algorithm that utilizes recurrent neural networks (RNNs) to forecast scalar time series data. Unlike traditional methods such as ARIMA or ETS, DeepAR+ trains a single model that considers all the time series together. This approach is particularly useful when dealing with datasets containing multiple similar time series across different units.\n",
+    "\n",
+    "- By using DeepAR+ and incorporating the Weather Index featurization, the model can take into account the impact of weather conditions on water consumption without gathering weather information manually. The Weather Index provides a way to include external factors in the forecasting model, allowing it to capture the relationship between water demand and weather patterns."
    ]
   },
   {
