--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -119,6 +119,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Kinses Shards\n",
+    "\n",
+    "- Shard is the base throughput unit of an Amazon Kinesis data stream. One shard provides a capacity of 1 MB/sec data input and 2 MB/sec data output. One shard can support up to 1000 PUT records per second. You will specify the number of shards needed when you create a data stream."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Redshift with Kinses"
    ]
   },
