--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -112,7 +112,9 @@
    "source": [
     "### The option that says: Use a streaming ETL job in AWS Glue to transform the data coming from the Kinesis Data Firehose delivery stream is incorrect. Kinesis Data Firehose is not a valid streaming source for a streaming ETL job in AWS Glue. You can, however, consume data from Kinesis Data Streams.\n",
     "\n",
-    "### The option that says: Store the data records in an Amazon S3 bucket and use Amazon Athena to run queries is incorrect. Although this is technically a valid solution, it does not provide real-time insights, unlike Kinesis Data Analytics. Amazon Athena is simply an interactive query service that makes it easy to analyze data in Amazon S3 using standard SQL. Athena is also not capable of consuming data directly from the Kinesis Data Firehose delivery stream in real-time."
+    "### The option that says: Store the data records in an Amazon S3 bucket and use Amazon Athena to run queries is incorrect. Although this is technically a valid solution, it does not provide real-time insights, unlike Kinesis Data Analytics. Amazon Athena is simply an interactive query service that makes it easy to analyze data in Amazon S3 using standard SQL. Athena is also not capable of consuming data directly from the Kinesis Data Firehose delivery stream in real-time.\n",
+    "\n",
+    "### The option that says: Use Amazon Kinesis Data Streams to ingest customer data and configure a Kinesis Data Firehose delivery stream as a consumer to convert the data into Apache Parquet is incorrect. Although this could be a valid solution, it entails more development effort as Kinesis Data Firehose does not support converting CSV files directly into Apache Parquet, unlike JSON."
    ]
   },
   {
