--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -30,18 +30,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###"
+    "## Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.5, 1.5]), array([ 1.5, -0.5]))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v = np.array([2, 1])\n",
+    "u = np.array([1, 3])\n",
+    "\n",
+    "# Calculate the projection of v onto u\n",
+    "proj_u_v = (np.dot(v, u) / np.dot(u, u)) * u\n",
+    "\n",
+    "# Calculate the orthogonal component of v with respect to u\n",
+    "orth_u_v = v - proj_u_v\n",
+    "\n",
+    "proj_u_v, orth_u_v"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
