--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -13,12 +13,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###"
+    "## Question\n",
+    "\n"
    ]
   }
  ],
