added new notes

--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -17,7 +17,20 @@
    "metadata": {},
    "source": [
     "## Question\n",
-    "\n"
+    "\n",
+    "### After training a SageMaker XGBoost based model over a huge training dataset, the data science team observed that it has low accuracy on the training data as well as low accuracy on the test data.As an AWS Certified ML Specialist, which of the following techniques would you recommend to help resolve this problem? (Select two):\n",
+    "\n",
+    "- Add regularization to the model\n",
+    "- Use more training data\n",
+    "- Use more features in the model\n",
+    "- Remove regularization from the model\n",
+    "- Use less features in the model\n",
+    "\n",
+    "\n",
+    "### Use More Features in the Model\n",
+    "\n",
+    "- Rationale: Adding more features can provide the model with more information and potentially capture more complexity in the dataset. If the model is currently not performing well because it's too simplistic, increasing the number and variety of features might help it learn better and make more accurate predictions.\n",
+    "- Impact: By introducing more relevant features, you allow the model to make decisions based on a wider array of data points, which might capture relationships and patterns previously overlooked."
    ]
   }
  ],
