added new models

--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -56,6 +56,27 @@
     "- Rationale: Adding more features can provide the model with more information and potentially capture more complexity in the dataset. If the model is currently not performing well because it's too simplistic, increasing the number and variety of features might help it learn better and make more accurate predictions.\n",
     "- Impact: By introducing more relevant features, you allow the model to make decisions based on a wider array of data points, which might capture relationships and patterns previously overlooked."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
+    "\n",
+    "### A Machine Learning Specialist splits up a large dataset into batches to train a neural network model. After some iterative tests, the Specialist noticed that the loss function is oscillating.Which is the MOST probable cause of the problem?\n",
+    "\n",
+    "\n",
+    "\n",
+    "### The learning rate is a constant value used in the Stochastic Gradient Descent (SGD) algorithm. Learning rate affects the speed at which the algorithm reaches (converges to) the optimal weights. The SGD algorithm makes updates to the weights of the linear model for every data example it sees. The size of these updates is controlled by the learning rate\n",
+    "\n",
+    "- The option that says: The batch sizes are not small enough is incorrect because smaller batch sizes would actually slow down the learning process, which is not indicative of the loss function’s oscillating behavior.\n",
+    "- The option that says: The learning rate is too low is incorrect because if the learning rate is too low, the loss function will just slowly decrease and not oscillate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
