added new models

--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -76,6 +76,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Question:\n",
+    "\n",
+    "### A Machine Learning Specialist is training a binary classification model for email spam filtering. During the model evaluation, the Specialist noticed that the number of predicted spam is significantly smaller than the number of genuine emails. The model did not generalize well when tested on actual data. This is not acceptable and does not meet the business requirements. How can the Specialist change the model output in the easiest way to meet the business goal?\n",
+    "\n",
+    "### You can fine-tune your ML model performance metrics by adjusting the score threshold. Adjusting this value changes the level of confidence that the model must have in a prediction before it considers the prediction to be positive. It also changes how many false negatives and false positives you are willing to tolerate in your predictions.\n",
+    "\n",
+    "### You can control the cutoff for what the model considers a positive prediction by increasing the score threshold until it considers only the predictions with the highest likelihood of being true positives as positive. You can also reduce the score threshold until you no longer have any false negatives. Choose your cutoff to reflect your business needs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
