added new notes

--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -89,6 +89,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Regularization\n",
+    "\n",
+    "- Regularization helps prevent linear models from overfitting training data examples (that is, memorizing patterns instead of generalizing them) by penalizing extreme weight values. L1 regularization has the effect of reducing the number of features used in the model by pushing to zero the weights of features that would otherwise have small weights.\n",
+    "\n",
+    "- As a result, L1 regularization results in sparse models and reduces the amount of noise in the model. L2 regularization results in smaller overall weight values and stabilizes the weights when there is a high correlation between the input features. You control the amount of L1 or L2 regularization applied by using the Regularization type and Regularization amount parameters. An extremely large regularization value could result in all features having zero weights, preventing a model from learning patterns.\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
